@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-07-24T08:23:01Z",
+  "timestamp" : "2023-07-28T16:22:36Z",
   "count_outdated" : 202,
   "uniques_outdated" : 142,
-  "count" : 203,
-  "uniques" : 143,
+  "count" : 205,
+  "uniques" : 144,
   "clones" : [
     {
       "timestamp": "2023-07-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
